--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,23 @@
 #Server#port
 server.port=8010
 
-# DB 설정
+# DB ì¤ì 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/securityboot
+spring.datasource.url=jdbc:mysql://localhost:3306/securityboot?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
 
 
 # JPA
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# MySQL 을 사용할 것.
+spring.jpa.database=mysql
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 
 
-# 실행되는 쿼리로그 확인하고 싶을 때
+# ì¤íëë ì¿¼ë¦¬ë¡ê·¸ íì¸íê³  ì¶ì ë
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
