--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 
-# ì¤íëë ì¿¼ë¦¬ë¡ê·¸ íì¸íê³  ì¶ì ë
+
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
