--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
 	implementation 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	implementation 'org.springframework.security:spring-security-oauth2-client:5.7.5'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity'
 	
 	//화면에서 전달받은 입력값을 검증하려면 springboot validation 라이브러리 검증
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
